--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <p>by <a  href="https://twitter.com/serializar"><button>@serializar</button></a> on twitter</p>
     </div>
     <h1>Background Generator</h1>
-    <input oninput="setGradient()" class="color1" type="color" name="color1" value="#00ff00">
-    <input oninput="setGradient()" class="color2" type="color" name="color2" value="#ff0000">
+    <input class="color1" type="color" name="color1" value="#00ff00">
+    <input class="color2" type="color" name="color2" value="#ff0000">
     <h2>Copy the RGB code of the background color you need below</h2>
     <h3></h3>
     <script type="text/javascript" src="script.js"></script>
